2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* MediaQueryParser.pm, SelectorsParser.pm, Parser.pm: Support
	for new style of error reports.

2008-02-11  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: 'writing-mode', 'text-anchor', 'dominant-baseline', 
	and 'alignment-baseline' are implemented.

2008-02-11  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): Precious '@charset' error
	reporting.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): '@import' support.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): Create a style sheet
	before the actual parsing (or use the style sheet created before
	the invocation to the method.
	(init): New.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: |attr(prefix|localname)| did not work.  Support 
	for uppercase namespace prefixes (namespace prefixes were
	not normalized into lowercase when they were looked up.).  Report
	the property name token when an unknown property error is raised.
	The '-moz-pre-wrap' value is supported for 'white-space' property.
	('background-position'): 'center left' and 'center right'
	were not supported.

	* SelectorsParser.pm: Report the namespace prefix token when
	an undeclared prefix error is raised.  S_TOKEN in 
	COMBINATOR_STATE was not handled correctly.

2008-02-09  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (new): s/unsupported/u/;

2008-02-08  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for '@nedia' at-rule.

2008-02-08  Wakaba  <wakaba@suika.fam.cx>

	* MediaQueryParser.pm, MediaQuerySerializer.pm: New Perl modules.

2008-02-03  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('display', 'list-style-type',
	'caption-side'): CSS 2.0 values added.
	('font-size-adjust', 'font-stretch', 'marker-offset'): Implemented. 
	($length_percentage_keyword_parser): Now this is in a variable.
	($length_keyword_parser): Now this is in a variable, too.
	('font'): Reset 'font-size-adjust' and 'font-stretch' as