@@ -1,5 +1,9 @@
 2008-08-16  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm (cursor): Support for 'hand' keyword.
+
+2008-08-16  Wakaba  <wakaba@suika.fam.cx>
+
 	* MediaQueryParser.pm, SelectorsParser.pm, Parser.pm: Support
 	for new style of error reports.
 
